--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -5,9 +5,14 @@
 #hist_scatter_line = brand,3,pO83_CORR,NC_017659.1,0,20,../data/base_brand.txt:../data/NC_017659.1.fa,color->green:opacity->1,0->10,0,1->25->4,ytick_label_text,0,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->ref base,gap:60bp,fontsize:13,color:black	start_end_xaxis->1:70
 hist_scatter_line = brand,3,pO83_CORR,NC_017659.1,0,20,../data/base_brand.txt:../data/NC_017659.1.fa,color->green:opacity->1,0.01->10,0,0->2->4,ytick_label_text,0,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->ref base,gap:60bp,fontsize:13,color:black
 
+hist_scatter_line = GC,1,pO83_CORR,NC_017659.1,0,100,../data/NC_017659.1.fa,color->black:opacity->1,13->81,1,0->1->0.2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->genome GC percents(%),gap:60bp,fontsize:13,color:black
+
+hist_scatter_line = GC,1,pO83_CORR.reverse,NC_017659.1,0,100,../data/NC_017659.1.fa,color->black:opacity->1,13->81,1,0->1->0.2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->genome GC percents(%),gap:60bp,fontsize:13,color:black
+
 synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
 display_segment_name=yes,center,shift_y:+2,fontsize:10,color:black,order:5,rotate:0
+tracks_block_reverse=pO83_CORR.reverse,1;
 
 
 
@@ -127,7 +132,7 @@ scale_position=low # up or low or up_low
 scale_color=green
 scale_width=0.5
 scale_ratio=1700 # bp
-scale_padding_y=0.6
+scale_padding_y=0.2
 scale_tick_opacity=1
 scale_tick_height=0.01
 scale_order=-1
