--- a/example/main.3.conf
+++ b/example/main.3.conf
@@ -2,26 +2,129 @@
 ###############################----This Is wanted, 如果要画read mapping下面参数是必须的----##############################
 
 ## long reads mapping
-reads_mapping=long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam:../data/chr14.fa,stack,-10->-110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:10bp:rect,H:blue:opacity0.6:height0.2:10bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	ylabel->pacbio read mapping stack,gap:50bp,fontsize:13,color:black	chop_soft_clip->10bp
+reads_mapping{
+#long_reads,1,chr14,14,0,../data/pacbio.chr14.sort.bam:../data/chr14.fa,stack,-10->-110,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:10bp:rect,H:blue:opacity0.6:height0.2:10bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	ylabel->pacbio read mapping stack,gap:50bp,fontsize:13,color:black	chop_soft_clip->10bp
+
+}# if add legend for reads_mapping
 
 
 ## short pair-end reads mapping as pair
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,paired:color->Orange:opacity->1:cross_link_height_line->0.3,79->117,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illuminate read mapping paired,gap:60bp,fontsize:13,color:black
+reads_mapping{
+#short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,paired:color->Orange:opacity->1:cross_link_height_line->0.3,79->117,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illuminate read mapping paired,gap:60bp,fontsize:13,color:black
+
+}
 
 ## short pair-end reads mapping as stack
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,stack,53->77,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illumnate read mapping stack,gap:60bp,fontsize:13,color:black
+reads_mapping{
+#short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,stack,53->77,0,32->51->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	ylabel->illumnate read mapping stack,gap:60bp,fontsize:13,color:black
+
+}
 
 ## short reads depth
-hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->black:opacity->1,31->41,1,25->5->10,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->illuminate read depth,gap:60bp,fontsize:13,color:black	start_end_xaxis->66901400:66902400
-hist_scatter_line = hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->green:opacity->1,42->52,1,5->25->5,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	start_end_xaxis->66902401:66903400
+hist_scatter_line{
+data_type = hist
+#data_display_order = 1
+track_name = chr14
+chr_id = 14
+#block_flag = 0
+window_size = 20
+data_file = ../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa
+#data_color = color->black:opacity->1
+subtrack_yaxis_bg_region = 31->41
+subtrack_yaxis_display_region = 25->5->10
+ytick_display_flag = 1
+ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->illuminate read depth,gap:60bp,fontsize:13,color:black	start_end_xaxis->66901400:66902400	hide_max->1
 
+}
+
+hist_scatter_line{
+####hist,1,chr14,14,0,20,../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa,color->green:opacity->1,42->52,1,5->25->5,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	start_end_xaxis->66902401:66903400
+data_type = hist
+#data_display_order = 1
+track_name = chr14
+chr_id= 14
+#block_flag = 0
+window_size = 20bp
+data_file = ../data/illumina.chr14.sort.bam.depth.txt:../data/chr14.fa
+#data_color = color->black:opacity->1
+subtrack_yaxis_bg_region = 31->41
+subtrack_yaxis_display_region = 25->5->10
+ytick_display_flag = 1
+#ytick_label = ytick_label_text
+#hgrid_flag = 0
+#ytick_color = green:green
+#ytick_opacity = 0.6:0.3
+#ytick_order = 1:1:0.2:0.3
+#label_size = 5:8
+start_end_xaxis = 66902401:66903400
+}
 
 ## short pair-end reads mappng as rainbow
-reads_mapping=short_reads,1,chr14,14,0,../data/illumina.chr14.sort.bam:../data/chr14.fa,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,10->30,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	
+reads_mapping{
+data_type = short_reads
+#data_display_order = 1
+track_name = chr14
+chr_id = 14
+#block_flag = 0
+data_file = ../data/illumina.chr14.sort.bam:../data/chr14.fa
+data_display_shape = rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05
+subtrack_yaxis_bg_region = 10->30
+subtrack_yaxis_display_region = 10->40->3
+#ytick_display_flag = 0
+#ytick_label = ytick_label_text
+#hgrid_flag = 0
+#ytick_color = green:black
+#ytick_opacity = 1:1
+#ytick_order = 2:6:0.2:0.1
+#label_size = 15:15
+#mapqs = 0:10:40	
+}
+
 
 ## snpindel in vcf
-reads_mapping=vcf,1,chr14,14,0,../data/hg002.chr14.vcf.gz:../data/chr14.fa,stack,2->9,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:1bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:1bp:rect,H:blue:opacity0.6:height0.2:1bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:1bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	display_feature_label->yes	feature_x_extent->-2bp,+2bp	ylabel->vcf,gap:60bp,fontsize:15,color:green
+#reads_mapping=vcf,1,chr14,14,0,../data/hg002.chr14.vcf.gz:../data/chr14.fa,stack,2->9,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:1bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:1bp:rect,H:blue:opacity0.6:height0.2:1bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:1bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	display_feature_label->yes	feature_x_extent->-2bp,+2bp	ylabel->vcf,gap:60bp,fontsize:15,color:green
+reads_mapping{
+data_type = vcf
+#data_display_order = 1
+track_name = chr14
+chr_id = 14
+#block_flag = 0
+data_file = ../data/hg002.chr14.vcf.gz:../data/chr14.fa
+data_display_shape = stack
+subtrack_yaxis_bg_region = 2->9
+subtrack_yaxis_display_region = 10->40->3
+#ytick_display_flag = 0
+#ytick_label = ytick_label_text
+#hgrid_flag = 0
+#ytick_color = green:black
+#ytick_opacity = 1:1
+#ytick_order = 2:6:0.2:0.1
+#label_size = 15:15
+#mapqs = 0:10:40
+#color_height_cs = M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:1bp:rect,D:black:opacity1:height0.8:1bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.4:1bp:rect,H:blue:opacity0.6:height0.2:1bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:1bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect
+#display_feature_label = yes
+#feature_x_extent = -2bp,+2bp
+ylabel = vcf,gap:60bp,fontsize:15,color:green
+}
 
+
+
+##gff
+##reads_type,$reads_order,$sample,$scf,$block_flag,$mapping_file,$show_type,$yaxis,$ytick_flag,$yaxis_show,$ytick_label,$hgrid_flag,$tick_color,$tick_opacity,     $tick_border,$label_size,$mapqs
+#reads_mapping = data_type:gff/bed	data_display_order:1	track_name:chr14	chr_id:14	block_flag:0	data_file:xx.gff 
+reads_mapping{
+data_type = gff/bed
+data_display_order = 1
+track_name = chr14
+chr_id = 14
+block_flag = 0
+data_file = xx.gff 
+}
+
+
+
+#data_type->gff/bed	data_display_order=1	chr14,14,0,xx.gff,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,10->30,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	
+##bed
 
 tracks_shift_y=chr14,0,+0.5:+0, #sample2,block_index2,+0.3;sample2,block_index2,-0.1
 
