--- a/example/main.7.conf
+++ b/example/main.7.conf
@@ -26,6 +26,7 @@ svg_background_color = white #background color of whole figure
 
 # plot feature type
 feature_keywords = gene # *, gene,point,hist,heatmap
+feature_content_display_keywords = gene # *, gene,point,hist,heatmap
 feature_setting = feature.color.label.7.conf # *
 
 # figure width layout
