--- a/example/feature.color.label.7.conf.legend.setting.conf
+++ b/example/feature.color.label.7.conf.legend.setting.conf
@@ -15,52 +15,94 @@ gene4538	pos_feature_label	medium_medium
 gene4538	label_text_anchor	middle
 gene4538	feature_shape	ellipse
 gene4538	y_margin_feature_label	0
-gene4538.blue.ellipse.1	feature_label	gene4538
-gene4538.blue.ellipse.1	feature_label_size	15
-gene4538.blue.ellipse.1	display_feature_label	yes
-gene4538.blue.ellipse.1	feature_shape	ellipse
-gene4538.blue.ellipse.1	feature_color	blue
-gene4538.blue.ellipse.1	feature_opacity	1
-gene4538.blue.ellipse.1	pos_feature_label	right_low_skip_arrow_sharp
-gene4538.blue.ellipse.1	y_margin_feature_label	-0.2
-gene4538.blue.ellipse.1	x_margin_feature_label	0.2
-gene4538.blue.ellipse.1	label_text_anchor	start
-gene4538.blue.ellipse.1	label_text_alignment_baseline	baseline
-gene4538.blue.ellipse.1	feature_shift_x_to	871.5
-gene4538.blue.ellipse.1	feature_shift_y_to	223
-gene4538.blue.ellipse.1	feature_arrow_width_extent	0.2
-gene4538.blue.ellipse.1	feature_height_ratio	15
-gene4538.blue.ellipse.1	feature_height_unit	px
-gene4537.yellow.circle_point.1	feature_label	gene4537
-gene4537.yellow.circle_point.1	feature_label_size	15
-gene4537.yellow.circle_point.1	display_feature_label	yes
-gene4537.yellow.circle_point.1	feature_shape	circle_point
-gene4537.yellow.circle_point.1	feature_color	yellow
-gene4537.yellow.circle_point.1	feature_opacity	1
-gene4537.yellow.circle_point.1	pos_feature_label	right_low_skip_arrow_sharp
-gene4537.yellow.circle_point.1	y_margin_feature_label	-0.3
-gene4537.yellow.circle_point.1	x_margin_feature_label	0.2
-gene4537.yellow.circle_point.1	label_text_anchor	start
-gene4537.yellow.circle_point.1	label_text_alignment_baseline	baseline
-gene4537.yellow.circle_point.1	feature_shift_x_to	886.5
-gene4537.yellow.circle_point.1	feature_shift_y_to	241
-gene4537.yellow.circle_point.1	feature_arrow_width_extent	0.2
-gene4537.yellow.circle_point.1	feature_height_ratio	15
-gene4537.yellow.circle_point.1	feature_height_unit	px
+
+gene4549	feature_color	red
+gene4549	legend_label	gene4549.lenged
+gene4549	legend_position	baseline
+
+
+gene4559	feature_color	black
+gene4559	feature_opacity	0.6
+gene4559	legend_label	gene4559.lengend
+gene4559	legend_position	baseline
+gene4549.lenged.red.arrow.1	feature_label	gene4549.lenged
+gene4549.lenged.red.arrow.1	feature_label_size	15
+gene4549.lenged.red.arrow.1	display_feature_label	yes
+gene4549.lenged.red.arrow.1	feature_shape	arrow
+gene4549.lenged.red.arrow.1	feature_color	red
+gene4549.lenged.red.arrow.1	feature_opacity	1
+gene4549.lenged.red.arrow.1	pos_feature_label	right_medium_skip_arrow_sharp
+gene4549.lenged.red.arrow.1	y_margin_feature_label	0
+gene4549.lenged.red.arrow.1	x_margin_feature_label	0.1
+gene4549.lenged.red.arrow.1	label_text_anchor	start
+gene4549.lenged.red.arrow.1	label_text_alignment_baseline	middle
+gene4549.lenged.red.arrow.1	feature_shift_x_to	343.65
+gene4549.lenged.red.arrow.1	feature_shift_y_to	484.6
+gene4549.lenged.red.arrow.1	feature_arrow_width_extent	0.2
+gene4549.lenged.red.arrow.1	feature_height_ratio	14
+gene4549.lenged.red.arrow.1	feature_height_unit	px
+gene4559.lengend.black.arrow.0.6	feature_label	gene4559.lengend
+gene4559.lengend.black.arrow.0.6	feature_label_size	15
+gene4559.lengend.black.arrow.0.6	display_feature_label	yes
+gene4559.lengend.black.arrow.0.6	feature_shape	arrow
+gene4559.lengend.black.arrow.0.6	feature_color	black
+gene4559.lengend.black.arrow.0.6	feature_opacity	0.6
+gene4559.lengend.black.arrow.0.6	pos_feature_label	right_medium_skip_arrow_sharp
+gene4559.lengend.black.arrow.0.6	y_margin_feature_label	0
+gene4559.lengend.black.arrow.0.6	x_margin_feature_label	0.1
+gene4559.lengend.black.arrow.0.6	label_text_anchor	start
+gene4559.lengend.black.arrow.0.6	label_text_alignment_baseline	middle
+gene4559.lengend.black.arrow.0.6	feature_shift_x_to	496.75
+gene4559.lengend.black.arrow.0.6	feature_shift_y_to	484.6
+gene4559.lengend.black.arrow.0.6	feature_arrow_width_extent	0.2
+gene4559.lengend.black.arrow.0.6	feature_height_ratio	14
+gene4559.lengend.black.arrow.0.6	feature_height_unit	px
 gene4532.black.arrow.1	feature_label	gene4532
 gene4532.black.arrow.1	feature_label_size	15
 gene4532.black.arrow.1	display_feature_label	yes
 gene4532.black.arrow.1	feature_shape	arrow
 gene4532.black.arrow.1	feature_color	black
 gene4532.black.arrow.1	feature_opacity	1
-gene4532.black.arrow.1	pos_feature_label	right_low_skip_arrow_sharp
-gene4532.black.arrow.1	y_margin_feature_label	-0.2
-gene4532.black.arrow.1	x_margin_feature_label	0.2
+gene4532.black.arrow.1	pos_feature_label	right_medium_skip_arrow_sharp
+gene4532.black.arrow.1	y_margin_feature_label	0
+gene4532.black.arrow.1	x_margin_feature_label	0.1
 gene4532.black.arrow.1	label_text_anchor	start
-gene4532.black.arrow.1	label_text_alignment_baseline	baseline
+gene4532.black.arrow.1	label_text_alignment_baseline	middle
 gene4532.black.arrow.1	feature_shift_x_to	871.5
-gene4532.black.arrow.1	feature_shift_y_to	259
+gene4532.black.arrow.1	feature_shift_y_to	204.5
 gene4532.black.arrow.1	feature_arrow_width_extent	0.2
-gene4532.black.arrow.1	feature_height_ratio	15
+gene4532.black.arrow.1	feature_height_ratio	14
 gene4532.black.arrow.1	feature_height_unit	px
+gene4537.yellow.circle_point.1	feature_label	gene4537
+gene4537.yellow.circle_point.1	feature_label_size	15
+gene4537.yellow.circle_point.1	display_feature_label	yes
+gene4537.yellow.circle_point.1	feature_shape	circle_point
+gene4537.yellow.circle_point.1	feature_color	yellow
+gene4537.yellow.circle_point.1	feature_opacity	1
+gene4537.yellow.circle_point.1	pos_feature_label	right_medium_skip_arrow_sharp
+gene4537.yellow.circle_point.1	y_margin_feature_label	0
+gene4537.yellow.circle_point.1	x_margin_feature_label	0.1
+gene4537.yellow.circle_point.1	label_text_anchor	start
+gene4537.yellow.circle_point.1	label_text_alignment_baseline	middle
+gene4537.yellow.circle_point.1	feature_shift_x_to	875
+gene4537.yellow.circle_point.1	feature_shift_y_to	222.7
+gene4537.yellow.circle_point.1	feature_arrow_width_extent	0.2
+gene4537.yellow.circle_point.1	feature_height_ratio	14
+gene4537.yellow.circle_point.1	feature_height_unit	px
+gene4538.blue.ellipse.1	feature_label	gene4538
+gene4538.blue.ellipse.1	feature_label_size	15
+gene4538.blue.ellipse.1	display_feature_label	yes
+gene4538.blue.ellipse.1	feature_shape	ellipse
+gene4538.blue.ellipse.1	feature_color	blue
+gene4538.blue.ellipse.1	feature_opacity	1
+gene4538.blue.ellipse.1	pos_feature_label	right_medium_skip_arrow_sharp
+gene4538.blue.ellipse.1	y_margin_feature_label	0
+gene4538.blue.ellipse.1	x_margin_feature_label	0.1
+gene4538.blue.ellipse.1	label_text_anchor	start
+gene4538.blue.ellipse.1	label_text_alignment_baseline	middle
+gene4538.blue.ellipse.1	feature_shift_x_to	878.5
+gene4538.blue.ellipse.1	feature_shift_y_to	240.9
+gene4538.blue.ellipse.1	feature_arrow_width_extent	0.2
+gene4538.blue.ellipse.1	feature_height_ratio	14
+gene4538.blue.ellipse.1	feature_height_unit	px
 
