--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -9,7 +9,19 @@ hist_scatter_line = GC,1,pO83_CORR,NC_017659.1,0,100,../data/NC_017659.1.fa,colo
 
 hist_scatter_line = GC,1,pO83_CORR.reverse,NC_017659.1,0,100,../data/NC_017659.1.fa,color->black:opacity->1,13->81,1,0->1->0.2,ytick_label_text,hgrid_flag,green:green,0.6:0.3,1:1:0.2:0.3,5:8	ylabel->genome GC percents(%),gap:60bp,fontsize:13,color:black
 
-synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny{
+#synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+data_display_order = 2->3
+query = pO83_CORR.indel
+target = pO83_CORR
+alignment_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6
+alignment_format = blast_m8
+alignment_block_shape = quadrilateral
+forward_color = orange->opacity0.5
+reverse_color = blue->opacity0.7
+cross_link_shift_y = +3:-3
+sort = 1
+}
 
 display_segment_name=yes,center,shift_y:+2,fontsize:10,color:black,order:5,rotate:0
 tracks_block_reverse=pO83_CORR.reverse,1;
