update paramater usage

--- a/example/main.2.conf
+++ b/example/main.2.conf
@@ -2,27 +2,145 @@
 ###############################----This Is wanted, 如果要画read mapping下面参数是必须的----##############################
 
 # for pO83_CORR
-reads_mapping=short_reads,1,pO83_CORR,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa,rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05,5->33,0,10->30->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,10:10:40	ylabel->illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
-reads_mapping=short_reads,1,pO83_CORR,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa,stack,35->65,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,10:10:40	ylabel->illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
-reads_mapping=long_reads,1,pO83_CORR,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa,stack,70->100,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:5bp:rect,H:blue:opacity0.6:height0.2:5bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	ylabel->pacbio read mapping stack,gap:50bp,fontsize:13,color:black	chop_soft_clip->no
+reads_mapping{
+data_type=short_reads
+track_name=pO83_CORR
+chr_id=NC_017659.1
+data_file=../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
+ylabel=illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
+data_display_shape=rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05
+#subtrack_yaxis_bg_region=5->33
+#skip = 1 
+}
 
+reads_mapping{
+data_type = short_reads
+track_name = pO83_CORR
+chr_id = NC_017659.1
+data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
+data_display_shape = stack
+ylabel = illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region=35->65
+#skip = 1 
+}
+
+
+reads_mapping{
+data_type = long_reads
+track_name = pO83_CORR
+chr_id = NC_017659.1
+data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa
+data_display_shape = stack
+ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region = 70->100
+#color_height_cs = M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:5bp:rect,H:blue:opacity0.6:height0.2:5bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect
+#chop_soft_clip = no
+#skip = 1 
+}
 
 # for pO83_CORR.twin
-reads_mapping=short_reads,1,pO83_CORR.twin,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa,rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05,5->33,0,10->30->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,10:10:40	ylabel->illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
-reads_mapping=short_reads,1,pO83_CORR.twin,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa,stack,35->65,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,10:10:40	ylabel->illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
-reads_mapping=long_reads,1,pO83_CORR.twin,NC_017659.1,0,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa,stack,70->95,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:5bp:rect,H:blue:opacity0.6:height0.2:5bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	ylabel->pacbio read mapping stack,gap:50bp,fontsize:13,color:black
+reads_mapping{
+data_type = short_reads
+track_name = pO83_CORR.twin
+chr_id = NC_017659.1
+data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
+data_display_shape = rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05
+ylabel = illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region = 5->33
+#skip = 1 
+}
+
+reads_mapping{
+data_type = short_reads
+track_name = pO83_CORR.twin
+chr_id = NC_017659.1
+data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
+data_display_shape = stack
+ylabel = illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region = 35->65
+#skip = 1 
+}
+
+reads_mapping{
+data_type = long_reads
+track_name = pO83_CORR.twin
+chr_id = NC_017659.1
+data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa
+data_display_shape = stack
+ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region = 70->95
+#skip = 1 
+}
+
 
 # for pO83_CORR.indel
-reads_mapping=long_reads,1,pO83_CORR.indel,NC_017659.1.fake,0,../data/NC_017659.1.indel.fa.longreads.map2ref.sort.bam:../data/NC_017659.1.indel.fa,stack,-20->-100,0,20->30->2,ytick_label_text,hgrid_flag,green:black,1:1,2:6:0.2:0,15:15,0:10:40	color_height_cs->M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:5bp:rect,H:blue:opacity0.6:height0.2:5bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect	ylabel->pacbio read mapping stack,gap:50bp,fontsize:13,color:black
+reads_mapping{
+data_type = long_reads
+track_name = pO83_CORR.indel
+chr_id = NC_017659.1.fake
+data_file = ../data/NC_017659.1.indel.fa.longreads.map2ref.sort.bam:../data/NC_017659.1.indel.fa
+data_display_shape = stack
+ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
+#subtrack_yaxis_bg_region = -20->-100
+#skip = 1 
+}
 
 
 tracks_shift_y=pO83_CORR,0,+1:+0;pO83_CORR.twin,0,+1:-0.5
 tracks_shift_x=pO83_CORR,1,+200bp:+0bp;pO83_CORR,2,-400bp:+0bp;pO83_CORR.twin,1,+300bp:+0bp #tracks_shift_x=pO83_CORR,1,+200bp:+0bp;pO83_CORR,2,+100bp:+0bp;
 
 #mumer
-synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR,../data/mummer.delta.filter.coords,mummer_coords,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny{
+data_display_order = 0->1
+query = pO83_CORR.indel
+target = pO83_CORR
+alignment_file = ../data/mummer.delta.filter.coords
+alignment_format = mummer_coords
+alignment_block_shape = quadrilateral
+forward_color = orange->opacity0.5
+reverse_color = blue->opacity0.7
+cross_link_shift_y = +3:-3
+sort = 1
+}
+
 allow_feature_out_of_list=synteny
 display_segment_name=yes,center,shift_y:+2,fontsize:6,color:black,order:5,rotate:0 # yes or no , for scaffold name
+
+
+
+
+
+
+
+exit
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
