update paramater usage

--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -105,7 +105,7 @@ shift_angle_closed_feature = 10
 # layout
 top_bottom_margin = 0.2 # 高度上 top和bottom占的比例,top和bottom可能有scale
 space_between_blocks = 500 # bp, mean space of every block in one track
-default_legend = other
+#default_legend = other
 
 # new sample name
 #sample_name_old2new = sample.name.new.conf
