--- a/example/main.2.conf
+++ b/example/main.2.conf
@@ -9,7 +9,7 @@ chr_id=NC_017659.1
 data_file=../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
 ylabel=illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
 data_display_shape=rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05
-#subtrack_yaxis_bg_region=5->33
+subtrack_yaxis_bg_region=5->33
 #skip = 1 
 }
 
@@ -20,7 +20,7 @@ chr_id = NC_017659.1
 data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
 data_display_shape = stack
 ylabel = illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region=35->65
+subtrack_yaxis_bg_region=35->65
 #skip = 1 
 }
 
@@ -32,7 +32,7 @@ chr_id = NC_017659.1
 data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa
 data_display_shape = stack
 ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region = 70->100
+subtrack_yaxis_bg_region = 70->100
 #color_height_cs = M:green:opacity0.8:height0.5:1bp:rect,I:red:opacity1:height0.9:6bp:rect,D:black:opacity1:height0.8:3bp:rect,N:blue:opacity1:height0.2:1bp:rect,S:blue:opacity0.6:height0.9:5bp:rect,H:blue:opacity0.6:height0.2:5bp:rect,P:blue:opacity1:height0.2:1bp:rect,X:Purple:opacity1:height0.6:1bp:rect,reverse:#1E90FF:opacity0.6:height0.8:6bp:arrow,forward:green:opacity0.6:height0.8:1bp:arrow,fake:white:opacity1:height0.8:0bp:rect
 #chop_soft_clip = no
 #skip = 1 
@@ -46,7 +46,7 @@ chr_id = NC_017659.1
 data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
 data_display_shape = rainbow:color->blue:opacity->0.8:cross_link_width_ellipse->0.05
 ylabel = illuminate pair-end read mapping,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region = 5->33
+subtrack_yaxis_bg_region = 5->33
 #skip = 1 
 }
 
@@ -57,7 +57,7 @@ chr_id = NC_017659.1
 data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.sr.sam.sorted.bam:../data/NC_017659.1.fa
 data_display_shape = stack
 ylabel = illuminate pair-end read mapping stack,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region = 35->65
+subtrack_yaxis_bg_region = 35->65
 #skip = 1 
 }
 
@@ -68,7 +68,7 @@ chr_id = NC_017659.1
 data_file = ../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.longreads.sort.bam:../data/NC_017659.1.fa
 data_display_shape = stack
 ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region = 70->95
+subtrack_yaxis_bg_region = 70->95
 #skip = 1 
 }
 
@@ -81,7 +81,7 @@ chr_id = NC_017659.1.fake
 data_file = ../data/NC_017659.1.indel.fa.longreads.map2ref.sort.bam:../data/NC_017659.1.indel.fa
 data_display_shape = stack
 ylabel = pacbio read mapping stack,gap:50bp,fontsize:13,color:black
-#subtrack_yaxis_bg_region = -20->-100
+subtrack_yaxis_bg_region = -20->-100
 #skip = 1 
 }
 
